--- a/PRACTICA_1/bocetos.html
+++ b/PRACTICA_1/bocetos.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bocetos</title>
   </head>
-  <body></body>
+  <body>
+  
+  <img src="./img/figma_inicio" alt="Figma Inicio" />
+  
+  </body>
 </html>
