--- a/PRACTICA_1/detalles.html
+++ b/PRACTICA_1/detalles.html
@@ -6,5 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalles</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Introducción</h2>
+        <p>
+            <p>
+                Una opción que posiblemente no te hayas planteado a la hora de planificar tu viaje de vacaciones es el intercambio de casas. Se trata de una fórmula que te permite cambiar tu casa con otras personas que residen en el destino donde quieres viajar.<br>
+                <b>HauSwap</b> es una web de intercambio de casas que te permitirá alojarte en residencias privadas de todo el mundo y poner tu propia casa a disposición de otros viajeros.
+            </p>
+            El primer paso es publicar tu casa, podrás añadir fotos, vídeos e información sobre tu rutina o experiencias que recomiendas al nuevo huesped; restaurantes cercanos, visitas culturales, parques o paisajes, tiendas...<br> 
+            NO ACABADO LUEGO SIGO :)
+  
+        </p>
+        
+    <h2>Tipos de usuarios</h2>
+        <p>
+            <em>Sin registrar:</em> puede navegar por la página y ver los distintos anuncios de intercambios pero no puede reservar, comentar ni publicar.<br>
+            <em>Registrado:</em> puede publicar anuncios de propiedades, hacer intercambios de casas y hacer valoraciones.<br>
+            <em>Administrador:</em> tienen acceso a toda la web y cuentan con todos los permisos para gestionar el contenido, los usuarios, ajustes…<br>
+        </p>
+    <h2>Funcionalidades</h2>
+        <p>
+            Buscador: Barra de búsqueda, que se pueda filtrar por destino, fechas, tipo de alojamiento, etc.
+            Reservar: Proceso de reserva (botón de reservar), creación de la reserva en base de datos, envío de correo de confirmación, etc.
+            Chat: Mensajes entre usuarios.
+            Panel de Administración: Panel que permita hacer algún cambio, administrar o editar la web sin tener que tocar código.
+            Gestión de contenido o gestión de la cuenta: Añadir, modificar o eliminar propiedades anunciadas. Cambiar datos personales, etc
+            Valoraciones: Publicar valoraciones y opiniones sobre una propiedad después de la estancia.
+        </p>
+  </body>
 </html>
