cabecera añadida a planificacion.html

--- a/PRACTICA_1/planificacion.html
+++ b/PRACTICA_1/planificacion.html
@@ -6,5 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planificación</title>
   </head>
-  <body></body>
+  <body>
+    <!--Cabecera con los enlaces al resto de páginas-->
+    <header>
+      <h2>Enlaces al resto de páginas:</h2>
+      <ul>
+        <a href="./index.html">Index</a>
+      </ul>
+      <ul>
+        <a href="bocetos.html">Bocetos</a>
+      </ul>
+      <ul>
+        <a href="contacto.html"></a
+        >Contacto
+      </ul>
+      <ul>
+        <a href="detalles.html"></a
+        >Detalles
+      </ul>
+      <ul>
+        <a href="miembros.html"></a
+        >Miembros
+      </ul>
+      <ul>
+        <a href="planificacion.html"></a
+        >Planificación
+      </ul>
+    </header>
+  </body>
 </html>
