--- a/PRACTICA_1/planificacion.html
+++ b/PRACTICA_1/planificacion.html
@@ -11,26 +11,24 @@
     <header>
       <h2>Enlaces al resto de páginas:</h2>
       <ul>
-        <a href="./index.html">Index</a>
-      </ul>
-      <ul>
-        <a href="bocetos.html">Bocetos</a>
-      </ul>
-      <ul>
-        <a href="contacto.html"></a
-        >Contacto
-      </ul>
-      <ul>
-        <a href="detalles.html"></a
-        >Detalles
-      </ul>
-      <ul>
-        <a href="miembros.html"></a
-        >Miembros
-      </ul>
-      <ul>
-        <a href="planificacion.html"></a
-        >Planificación
+        <li>
+          <a href="index.html">Index</a>
+        </li>
+        <li>
+          <a href="bocetos.html">Bocetos</a>
+        </li>
+        <li>
+          <a href="contacto.html">Contacto</a>
+        </li>
+        <li>
+          <a href="detalles.html">Detalles</a>
+        </li>
+        <li>
+          <a href="miembros.html">Miembros</a>
+        </li>
+        <li>
+          <a href="planificacion.html">Planificación</a>
+        </li>
       </ul>
     </header>
   </body>
