--- a/PRACTICA_1/bocetos.html
+++ b/PRACTICA_1/bocetos.html
@@ -7,6 +7,29 @@
     <title>Bocetos</title>
   </head>
   <body>
-  
+    <!--Cabecera con los enlaces al resto de páginas-->
+    <header>
+      <h2>Enlaces al resto de páginas:</h2>
+      <ul>
+        <li>
+          <a href="index.html">Index</a>
+        </li>
+        <li>
+          <a href="bocetos.html">Bocetos</a>
+        </li>
+        <li>
+          <a href="contacto.html">Contacto</a>
+        </li>
+        <li>
+          <a href="detalles.html">Detalles</a>
+        </li>
+        <li>
+          <a href="miembros.html">Miembros</a>
+        </li>
+        <li>
+          <a href="planificacion.html">Planificación</a>
+        </li>
+      </ul>
+    </header>
   </body>
 </html>
