--- a/PRACTICA_1/contacto.html
+++ b/PRACTICA_1/contacto.html
@@ -6,5 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
   </head>
-  <body></body>
+  <body>
+    <!--Cabecera con los enlaces al resto de páginas-->
+    <header>
+      <h2>Enlaces al resto de páginas:</h2>
+      <ul>
+        <li>
+          <a href="index.html">Index</a>
+        </li>
+        <li>
+          <a href="bocetos.html">Bocetos</a>
+        </li>
+        <li>
+          <a href="contacto.html">Contacto</a>
+        </li>
+        <li>
+          <a href="detalles.html">Detalles</a>
+        </li>
+        <li>
+          <a href="miembros.html">Miembros</a>
+        </li>
+        <li>
+          <a href="planificacion.html">Planificación</a>
+        </li>
+      </ul>
+    </header>
+  </body>
 </html>
