--- a/PRACTICA_1/detalles.html
+++ b/PRACTICA_1/detalles.html
@@ -7,38 +7,22 @@
     <title>Detalles</title>
   </head>
   <body>
-    <!--Cabecera con los enlaces al resto de páginas-->
-    <header>
-        <h2>Enlaces al resto de páginas:</h2>
-        <ul>
-          <li>
-            <a href="index.html">Index</a>
-          </li>
-          <li>
-            <a href="bocetos.html">Bocetos</a>
-          </li>
-          <li>
-            <a href="contacto.html">Contacto</a>
-          </li>
-          <li>
-            <a href="detalles.html">Detalles</a>
-          </li>
-          <li>
-            <a href="miembros.html">Miembros</a>
-          </li>
-          <li>
-            <a href="planificacion.html">Planificación</a>
-          </li>
-        </ul>
-      </header>
     <h2>Introducción</h2>
         <p>
             <p>
                 Una opción que posiblemente no te hayas planteado a la hora de planificar tu viaje de vacaciones es el intercambio de casas. Se trata de una fórmula que te permite cambiar tu casa con otras personas que residen en el destino donde quieres viajar.<br>
-                <b>HauSwap</b> es una web de intercambio de casas que te permitirá alojarte en residencias privadas de todo el mundo y poner tu propia casa a disposición de otros viajeros.
+                HauSwap es una web de intercambio de casas que te permitirá alojarte en residencias privadas de todo el mundo y poner tu propia casa a disposición de otros viajeros.
             </p>
-            El primer paso es publicar tu casa, podrás añadir fotos, vídeos e información sobre tu rutina o experiencias que recomiendas al nuevo huesped; restaurantes cercanos, visitas culturales, parques o paisajes, tiendas...<br> 
-            NO ACABADO LUEGO SIGO :)
+            <p>
+                El primer paso es publicar tu casa, podrás añadir fotos, vídeos e información sobre tu rutina o experiencias que recomiendas al nuevo huesped: restaurantes o bares cercanos, visitas culturales, parques o paisajes, tiendas...<br> 
+                El hospedarte en una casa de un particular, te ofrece la oportunidad de poder vivir como un local. Puedes ver el lugar al que viajas no solamente desde un punto de vista turístico, sino más allá.<br>
+                Es mucho más personal que el alojarte en un hotel, y además puedes aprovechar para comunicarte con los vecinos y observar cómo es realmente la vida en aquel lugar. Incluso puedes llegar a tener la oportunidad de poder practicar el idioma local, en caso de que quieras.<br>
+            </p>
+            <p>
+                Elige un destino y navega por nuestra web para encontrar tu casa favorita, podrás ver imágenes, información y valoraciones de otros usuarios que hayan realizado un swap previamente.<br>
+                Para contactar con otros usuarios podrás utilizar un chat, de esta manera podréis aclarar cualquier duda y decicidir una fecha para realizar el intercambio.<br>
+                Al terminar, podrás dar tu opinión sobre tu estancia para ayudar a nuevos huéspedes a la hora de decidir.
+            </p>
   
         </p>
         
@@ -50,12 +34,12 @@
         </p>
     <h2>Funcionalidades</h2>
         <p>
-            Buscador: Barra de búsqueda, que se pueda filtrar por destino, fechas, tipo de alojamiento, etc.
-            Reservar: Proceso de reserva (botón de reservar), creación de la reserva en base de datos, envío de correo de confirmación, etc.
-            Chat: Mensajes entre usuarios.
-            Panel de Administración: Panel que permita hacer algún cambio, administrar o editar la web sin tener que tocar código.
-            Gestión de contenido o gestión de la cuenta: Añadir, modificar o eliminar propiedades anunciadas. Cambiar datos personales, etc
-            Valoraciones: Publicar valoraciones y opiniones sobre una propiedad después de la estancia.
+            <em>Buscador:</em> Barra de búsqueda, que se pueda filtrar por destino, fechas, tipo de alojamiento, etc.<br>
+            <em>Reservar:</em> Proceso de reserva (botón de reservar), creación de la reserva en base de datos, envío de correo de confirmación, etc.<br>
+            <em>Chat:</em> Mensajes entre usuarios.<br>
+            <em>Panel de Administración:</em> Panel que permita hacer algún cambio, administrar o editar la web sin tener que tocar código.<br>
+            <em>Gestión de contenido o gestión de la cuenta:</em> Añadir, modificar o eliminar propiedades anunciadas. Cambiar datos personales, etc<br>
+            <em>Valoraciones:</em> Publicar valoraciones y opiniones sobre una propiedad después de la estancia.<br>
         </p>
   </body>
 </html>
