--- a/PRACTICA_1/detalles.html
+++ b/PRACTICA_1/detalles.html
@@ -7,6 +7,31 @@
     <title>Detalles</title>
   </head>
   <body>
+    <!--Cabecera con los enlaces al resto de páginas-->
+    <header>
+        <h2>Enlaces al resto de páginas:</h2>
+        <ul>
+        <li>
+            <a href="index.html">Index</a>
+        </li>
+        <li>
+            <a href="bocetos.html">Bocetos</a>
+        </li>
+        <li>
+            <a href="contacto.html">Contacto</a>
+        </li>
+        <li>
+            <a href="detalles.html">Detalles</a>
+        </li>
+        <li>
+            <a href="miembros.html">Miembros</a>
+        </li>
+        <li>
+            <a href="planificacion.html">Planificación</a>
+        </li>
+        </ul>
+    </header>
+
     <h2>Introducción</h2>
         <p>
             <p>
@@ -14,12 +39,12 @@
                 HauSwap es una web de intercambio de casas que te permitirá alojarte en residencias privadas de todo el mundo y poner tu propia casa a disposición de otros viajeros.
             </p>
             <p>
-                El primer paso es publicar tu casa, podrás añadir fotos, vídeos e información sobre tu rutina o experiencias que recomiendas al nuevo huesped: restaurantes o bares cercanos, visitas culturales, parques o paisajes, tiendas...<br> 
+                El primer paso es publicar tu casa, podrás añadir fotos, vídeos e información sobre tu rutina o experiencias que recomiendas al nuevo huésped: restaurantes o bares cercanos, visitas culturales, parques o paisajes, tiendas...<br> 
                 El hospedarte en una casa de un particular, te ofrece la oportunidad de poder vivir como un local. Puedes ver el lugar al que viajas no solamente desde un punto de vista turístico, sino más allá.<br>
                 Es mucho más personal que el alojarte en un hotel, y además puedes aprovechar para comunicarte con los vecinos y observar cómo es realmente la vida en aquel lugar. Incluso puedes llegar a tener la oportunidad de poder practicar el idioma local, en caso de que quieras.<br>
             </p>
             <p>
-                Elige un destino y navega por nuestra web para encontrar tu casa favorita, podrás ver imágenes, información y valoraciones de otros usuarios que hayan realizado un swap previamente.<br>
+                Elige un destino y navega por nuestra web para encontrar tu casa favorita. Podrás ver imágenes, información y valoraciones de otros usuarios que hayan realizado un swap previamente.<br>
                 Para contactar con otros usuarios podrás utilizar un chat, de esta manera podréis aclarar cualquier duda y decicidir una fecha para realizar el intercambio.<br>
                 Al terminar, podrás dar tu opinión sobre tu estancia para ayudar a nuevos huéspedes a la hora de decidir.
             </p>
