--- a/PRACTICA_1/miembros.html
+++ b/PRACTICA_1/miembros.html
@@ -47,7 +47,7 @@
   <h2 id="member1">ADRIÁN LÁZARO LLORENTE</h2>
   <p>Nombre completo: ADRIÁN LÁZARO LLORENTE</p>
   <p>Correo de contacto: adlazaro@ucm.es</p>
-  <img src="./img/adrian.jpeg" alt="Foto de Adrián" />
+  <img src="./img/adrian.jpeg" alt="Foto de Adrián" height="500" width="500"/>
   <p>
     Me encanta la música clásica y tocar el piano en mi tiempo libre. Me gusta
     explorar diferentes composiciones y arreglos, y me esfuerzo por mejorar
@@ -57,7 +57,7 @@
   <h2 id="member2">LAURA SAN MARTÍN DOBLADO</h2>
   <p>Nombre completo: LAURA SAN MARTÍN DOBLADO</p>
   <p>Correo de contacto:lausanma@ucm.es</p>
-  <img src="./img/laura.jpeg" alt="Foto de Laura" />
+  <img src="./img/laura.jpeg" alt="Foto de Laura" height="500" width="500"/>
   <p>
     Me apasiona el senderismo y la exploración de la naturaleza. Me gusta
     descubrir nuevas rutas y paisajes, y disfruto del aire fresco y la
@@ -68,7 +68,7 @@
   <h2 id="member3">DANIEL MARTÍN GONZÁLEZ</h2>
   <p>Nombre completo: DANIEL MARTÍN GONZÁLEZ</p>
   <p>Correo de contacto: danmar25@ucm.es</p>
-  <img src="./img/dany.jpeg" alt="Foto de Daniel" />
+  <img src="./img/dany.jpeg" alt="Foto de Daniel" height="500" width="500"/>
   <p>
     Me gusta coleccionar sellos antiguos y libros de filatelia. Me encanta
     aprender sobre la historia detrás de cada sello y descubrir nuevos
@@ -78,7 +78,7 @@
   <h2 id="member4">INÉS PALERO SAN ROMÁN</h2>
   <p>Nombre completo: INÉS PALERO SAN ROMÁN</p>
   <p>Correo de contacto: ipalero@ucm.es</p>
-  <img src="./img/ines.jpeg" alt="Foto de Inés" />
+  <img src="./img/ines.jpeg" alt="Foto de Inés" height="500" width="500"/>
   <p>
     Me gusta el arte y la fotografía. Me encanta capturar momentos y crear
     imágenes que capturen la belleza y la emoción de un momento o lugar.
@@ -87,7 +87,7 @@
   <h2 id="member5">AYA YAHYA AMAR</h2>
   <p>Nombre completo: AYA YAHYA AMAR</p>
   <p>Correo de contacto: ayayahya@ucm.es</p>
-  <img src="./img/aya.jpeg" alt="Foto de Aya" />
+  <img src="./img/aya.jpeg" alt="Foto de Aya" height="500" width="500"/>
   <p>
     Me apasiona la cocina y el experimentar con nuevos platillos. Me gusta
     utilizar ingredientes frescos y locales para crear comidas saludables y
@@ -97,7 +97,7 @@
   <h2 id="member6">PABLO MORENO CANDUELA</h2>
   <p>Nombre completo: PABLO MORENO CANDUELA</p>
   <p>Correo de contacto: pablmo07@ucm.es</p>
-  <img src="./img/pablo.jpeg" alt="Foto de Pablo" />
+  <img src="./img/pablo.jpeg" alt="Foto de Pablo" height="500" width="500"/>
   <p>
     Me encanta leer y escribir. Me gusta explorar diferentes géneros y
     descubrir nuevos autores, y me esfuerzo por mejorar mis habilidades de
