formateados los html y pasando por el validador

--- a/PRACTICA_1/contacto.html
+++ b/PRACTICA_1/contacto.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacto</title>
-  </head>
-  <body>
-    <!--Cabecera con los enlaces al resto de páginas-->
-    <header>
-      <h2>Enlaces al resto de páginas:</h2>
-      <ul>
-        <li>
-          <a href="index.html">Index</a>
-        </li>
-        <li>
-          <a href="bocetos.html">Bocetos</a>
-        </li>
-        <li>
-          <a href="contacto.html">Contacto</a>
-        </li>
-        <li>
-          <a href="detalles.html">Detalles</a>
-        </li>
-        <li>
-          <a href="miembros.html">Miembros</a>
-        </li>
-        <li>
-          <a href="planificacion.html">Planificación</a>
-        </li>
-      </ul>
-    </header>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto</title>
+</head>
+
+<body>
+  <!--Cabecera con los enlaces al resto de páginas-->
+  <header>
+    <h2>Enlaces al resto de páginas:</h2>
+    <ul>
+      <li>
+        <a href="index.html">Index</a>
+      </li>
+      <li>
+        <a href="bocetos.html">Bocetos</a>
+      </li>
+      <li>
+        <a href="contacto.html">Contacto</a>
+      </li>
+      <li>
+        <a href="detalles.html">Detalles</a>
+      </li>
+      <li>
+        <a href="miembros.html">Miembros</a>
+      </li>
+      <li>
+        <a href="planificacion.html">Planificación</a>
+      </li>
+    </ul>
+  </header>
+</body>
+
 </html>
