--- a/PRACTICA_1/planificacion.html
+++ b/PRACTICA_1/planificacion.html
@@ -2,9 +2,9 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planificación</title>
 </head>
 
@@ -34,40 +34,50 @@
     </ul>
   </header>
 
-  <body>
-    <h1>Planificación del proyecto</h1>
-    <table>
-      <tr>
-        <th>Práctica</th>
-        <th>Descripción</th>
-        <th>Fecha de entrega</th>
-      </tr>
-      <tr>
-        <td>Práctica 1</td>
-        <td>Descripción detallada del proyecto, en forma de página web simple con varios documentos descriptivos</td>
-        <td>24 de febrero</td>
-      </tr>
-      <tr>
-        <td>Práctica 2</td>
-        <td>Diseño de la aplicación usando HTML (sin CSS), de la arquitectura del lado del servidor y prototipo funcional de parte de la aplicación. Versión mínima del proyecto</td>
-        <td>17 de marzo</td>
-      </tr>
-      <tr>
-        <td>Práctica 3</td>
-        <td>Diseño de la apariencia de la aplicación usando hojas de estilos sobre la entrega anterior e incremento de la funcionalidad (40-50% del total)</td>
-        <td>11 de abril</td>
-      </tr>
-      <tr>
-        <td>Entrega final</td>
-        <td>Aplicación Web completa y funcional</td>
-        <td>5 de mayo</td>
-      </tr>
-    </table>
-    <p>El siguiente diagrama de Gantt muestra la planificación del proyecto y los plazos estimados para cada tarea:</p>
-    <img src="./img/gantt.jpg" alt="Diagrama de gantt" />
-  </body>
-  </html>
-
+  <h1>Planificación del proyecto</h1>
+  <table>
+    <tr>
+      <th>Práctica</th>
+      <th>Descripción</th>
+      <th>Fecha de entrega</th>
+    </tr>
+    <tr>
+      <td>Práctica 1</td>
+      <td>
+        Descripción detallada del proyecto, en forma de página web simple
+        con varios documentos descriptivos
+      </td>
+      <td>24 de febrero</td>
+    </tr>
+    <tr>
+      <td>Práctica 2</td>
+      <td>
+        Diseño de la aplicación usando HTML (sin CSS), de la arquitectura
+        del lado del servidor y prototipo funcional de parte de la
+        aplicación. Versión mínima del proyecto
+      </td>
+      <td>17 de marzo</td>
+    </tr>
+    <tr>
+      <td>Práctica 3</td>
+      <td>
+        Diseño de la apariencia de la aplicación usando hojas de estilos
+        sobre la entrega anterior e incremento de la funcionalidad (40-50%
+        del total)
+      </td>
+      <td>11 de abril</td>
+    </tr>
+    <tr>
+      <td>Entrega final</td>
+      <td>Aplicación Web completa y funcional</td>
+      <td>5 de mayo</td>
+    </tr>
+  </table>
+  <p>
+    El siguiente diagrama de Gantt muestra la planificación del proyecto y
+    los plazos estimados para cada tarea:
+  </p>
+  <img src="./img/gantt.jpg" alt="Diagrama de gantt">
 </body>
 
 </html>
