cambio barra navegación

--- a/PRACTICA_1/bocetos.html
+++ b/PRACTICA_1/bocetos.html
@@ -10,7 +10,7 @@
 
 <body>
   <!--Cabecera con los enlaces al resto de páginas-->
-  <header>
+  <nav>
     <h2>Enlaces al resto de páginas:</h2>
     <ul>
       <li>
@@ -32,12 +32,12 @@
         <a href="planificacion.html">Planificación</a>
       </li>
     </ul>
-  </header>
+  </nav>
   <div style="float: left; width: 20%">
     <!--Hueco 1-->
     <h2 style="text-align: center">Inicio</h2>
     <img src="./img/figma_inicio.png" alt="Inicio" height="500" width="300">
-    Esta es la pantalla principal de Inicio dónde podemos encontrar un header
+    Esta es la pantalla principal de Inicio dónde podemos encontrar un nav
     con el nombre y el logo de la compañía con un menú. Debajo encontramos un
     buscador donde podemos buscar casas bien sea por su nombre, por sus
     cracterísticas o bien por dónde están ubicadas. También vemos algunas
