--- a/PRACTICA_1/miembros.html
+++ b/PRACTICA_1/miembros.html
@@ -10,7 +10,7 @@
 
 <body>
   <!--Cabecera con los enlaces al resto de páginas-->
-  <header>
+  <nav>
     <h2>Enlaces al resto de páginas:</h2>
     <ul>
       <li>
@@ -32,7 +32,7 @@
         <a href="planificacion.html">Planificación</a>
       </li>
     </ul>
-  </header>
+  </nav>
 
   <h1>Miembros del grupo</h1>
   <ul>
